--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <img src="/logo.png" alt="logo" />
+      <img src="img/logo.png" alt="logo" />
     </header>
   </body>
 </html>
