fixed margins, buttons

--- a/index.html
+++ b/index.html
@@ -166,7 +166,12 @@
                 firm as if it was a leading staffing agency.
               </h5>
               <br />
-              <a href="#" class="btn btn-danger btn-round">See Details</a>
+              <a
+                href="#"
+                class="btn btn-warning btn-sm btn-round"
+                id="buttonclass"
+                >See Details</a
+              >
             </div>
           </div>
           <br />
@@ -287,7 +292,10 @@
                 ></textarea>
                 <div class="row">
                   <div class="col-md-4 ml-auto mr-auto">
-                    <button class="btn btn-danger btn-lg btn-fill">
+                    <button
+                      class="btn btn-warning btn-sm btn-round btn-fill"
+                      id="buttonclass"
+                    >
                       Send Message
                     </button>
                   </div>
@@ -298,20 +306,9 @@
         </div>
       </div>
     </div>
-    <footer class="footer footer-white">
-      <div class="container">
-        <div class="row">
-          <nav class="footer-nav">
-            <ul>
-              <li>
-                <a href="#">Hyperion Resources &copy;2022</a>
-              </li>
-              <li>
-                <a href="#">Follow Us</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
+    <footer>
+      <div id="footerclass">
+        Hyperion Resources &copy;2022
       </div>
     </footer>
     <!--   Core JS Files   -->
